--- a/AT FIRST SIGHT/berichten.html
+++ b/AT FIRST SIGHT/berichten.html
@@ -13,36 +13,46 @@
     <div id="berichten">
         <main>
             <header>
-                <h2>Berichten</h2>
+<nav>
+    <ul>
+        <li> <a href="./zoeken.html">zoeken</a> </li>
+        <li> <a href="#">profiel</a> </li>
+        <li><a href="#">reserve1</a> </li>
+        <li><a href="#">reserve2</a> </li>
+
+    </ul>
+</nav>
             </header>
+            <div class="subheader">
+                <h2>Berichten</h2>
+            </div>
             <div class="content">
                 <div class="wrapper">
                     <div id="containerGesprekspartners">
-                        <h2>Gesprekspartners</h2>
+                        <h3>Gesprekspartners</h3>
                         <div id="profielId" class="gesprekspartner"></div>
-
-                        <img src="#" alt="Naam partner" title="Naam partner">
                         <div class="nickname">Nickname</div>
                         <div class="bericht">Berichttekst</div>
 
                     </div>
                     <div id="containerBerichten">
-                        <h2>Berichtengeschiedenis</h2>
+                        <h3>Berichtengeschiedenis</h3>
                         <div id="berichtId" class="bericht">
                             <div>Nickname gesprekspartner</div>
                             <div>derde laatste bericht</div>
                             <div>voorlaatste bericht</div>
                             <div>laatste bericht</div>
                         </div>
+
                     </div>
                 </div>
             </div>
-    </div>
-    </main>
-    <footer>
-        <p>Ik ben een footer. Copywrigth 2019 VDAB</p>
-    </footer>
-    </div>
+
+        </main>
+        
+        <footer>
+            <p>Ik ben een footer. Copywrigth 2019 VDAB</p>
+
 
     <script src="berichten.js"></script>
 </body>
