--- a/AT FIRST SIGHT/inschrijven.html
+++ b/AT FIRST SIGHT/inschrijven.html
@@ -13,8 +13,20 @@
     <div id="inschrijven">
         <main>
             <header>
-                <h2> Profiel aanmaken</h2>
+                <nav>
+                    <ul>
+                        <li><a href="./zoeken.html">zoeken</a> </li>
+                        <li><a href="./berichten.html">berichten</a> </li>
+                        <li><a href="#">reserve1</a> </li>
+                        <li><a href="#">reserve2</a> </li>
+                    </ul>
+                </nav>
             </header>
+
+            <div class="subheader">
+                <h2> Profiel aanmaken</h2>
+            </div>
+
             <div class="content">
                 <div class="wrapper">
                     <div class="Input">
@@ -65,10 +77,13 @@
         </main>
 
         </main>
+
         <footer>
             <p>Ik ben een footer. Copywrigth 2019 VDAB</p>
         </footer>
     </div>
+
+
     <script src="inschrijven.js"></script>
 </body>
 
