--- a/AT FIRST SIGHT/zoeken.html
+++ b/AT FIRST SIGHT/zoeken.html
@@ -13,8 +13,18 @@
     <div id="zoeken">
         <main>
             <header>
-                <h2>zoeken</h2>
+                <nav>
+                    <ul>
+                        <li><a href="./berichten.html">berichten</a> </li>
+                        <li><a href="#">profiel</a> </li>
+                        <li><a href="#">reserve1</a> </li>
+                        <li><a href="#">reserve2</a> </li>
+                    </ul>
+                </nav>
             </header>
+            <div class="subheader">
+                <h2>zoeken</h2>
+            </div>
             <div class="content">
                 <div class="wrapper">
                     <form id="zoekform">
@@ -58,10 +68,13 @@
 
             </div>
         </main>
+
         <footer>
             <p>Ik ben een footer. Copywrigth 2019 VDAB</p>
         </footer>
     </div>
+
+
     <script src="./zoeken.js"></script>
 </body>
 
