--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                         <p>wachtwoord </p>
                     </div>
                     <div id="input" class="dropdown-con">
-                        <input id="frmWachtwoord" class="dropdown-con" />
+                        <input id="frmWachtwoord" type="password" class="dropdown-con" />
                     </div>
-                    <button id="loginbtn" onclick="fnLogin()">Log in</button>
+                    <button type="button" id="loginbtn" onclick="fnLogin()">Log in</button>
                 </form>
             </div>
         </div>
@@ -36,23 +36,23 @@
                 <button onclick="fnDropDown()" name="inloggen" class="dropbtn">Log In</button>
                 <a href="./inschrijven.html" class="inschrijven">INSCHRIJVEN</a>
             </div>
-            <div class="content wrapper">
-                <h3> Deze nacht</h3>
-                <p>een donkere maar heldere nacht
-                    vol passie en genot
-                    zachtheid, warmte en liefde
-                    niet denkend aan ons lot
-                </p>
-                <p> handen en lippen
-                    strelen elkaar zacht
-                    niemand wist en zou nooit weten
-                    wat deze nacht ons bracht
-                </p>
+            <div class="content">
+                <div class="wrapper">
+                    <h3> Deze nacht</h3>
+                    <p>een donkere maar heldere nacht
+                        vol passie en genot
+                        zachtheid, warmte en liefde
+                        niet denkend aan ons lot
+                    </p>
+                    <p> handen en lippen
+                        strelen elkaar zacht
+                        niemand wist en zou nooit weten
+                        wat deze nacht ons bracht
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="neen">
-            <button> <a target="blank" href="https://nl.wikipedia.org/wiki/Celibaat"> Neen dank u..</a> </button>
-        </div>
+
         </main>
 
 
