--- a/profiel.html
+++ b/profiel.html
@@ -33,7 +33,7 @@
 
             <div class="content">
                 <div class="wrapper">
-                    <div id="heart"></div>
+            
                 </div>
             </div>
         </main>
@@ -51,7 +51,7 @@
     </div>
 
 
-    <script src="./zoeken.js"></script>>
+    <script src="./zoeken.js"></script>
 
 </body>
 
