--- a/inschrijven.html
+++ b/inschrijven.html
@@ -35,51 +35,81 @@
             <div class="content">
                 <div class="wrapper">
                     <div class="Input">
-                        <label for="Naam">Naam: </label>
-                        <input type="text" id="Naam" class="inputveld">
-                        <br>
-                        <label for="FamNaam">familienaam: </label>
-                        <input type="text" id="FamNaam" class="inputveld">
-                        <br>
-                        <label for="Email">Email: </label>
-                        <input type="email" id="Email" class="inputveld">
-                        <br>
-                        <label for="Nickname">Nickname: </label>
-                        <input type="text" id="Nickname" class="inputveld">
-                        <br>
-                        <label for="Foto">Foto: </label>
-                        <input type="text" id="Foto" name="foto" class="inputveld">
-                        <button type="button" id="FotoUploadButton">uploaden</button>
-                        <br>
-                        <label for="Beroep">Beroep: </label>
-                        <input type="text" id="Beroep" class="inputveld">
-                        <br>
-                        <label for="RadiobuttonVrouw">Sexe: </label>
-                        <input type="radio" name="Sexe" id="RadiobuttonVrouw" value="v">vrouw <br>
-                        <br>
-                        <label for="RadiobuttonMan"></label>
-                        <input type="radio" name="Sexe" id="RadiobuttonMan" value="m">man <br>
-                        <br>
-                        <label for="Haarkleur">Haarkleur: </label>
-                        <input type="text" id="Haarkleur" class="inputveld">
-                        <br>
-                        <label for="Oogkleur">Oogkleur: </label>
-                        <input type="text" id="Oogkleur" class="inputveld">
-                        <br>
-                        <label for="Grootte">Grootte: </label>
-                        <input type="text" id="Grootte" class="inputveld">
-                        <br>
-                        <label for="Gewicht">Gewicht: </label>
-                        <input type="text" id="Gewicht" class="inputveld">
-                        <br>
-                        <label for="Wachtwoord">Wachtwoord: </label>
-                        <input type="password" id="Wachtwoord" class="inputveld">
-                        <label for="Sterrenbeeld">Sterrenbeeld: </label>
-                        <input type="text" id="Sterrenbeeld" class="inputveld">
+                        <div> <label for="Naam">  Naam: </label>
+                            <input type="text" id="Naam" class="inputveld"></div>
+
+                        <div> <label for="FamNaam">familienaam: </label>
+                            <input type="text" id="FamNaam" class="inputveld">
+                        </div>
+
+                        <div>
+                            <label for="Email">Email: </label>
+                            <input type="email" id="Email" class="inputveld">
+                        </div>
+
+                        <div>
+                            <label for="Nickname">Nickname: </label>
+                            <input type="text" id="Nickname" class="inputveld">
+                        </div>
+
+                        <div> <label for="Foto">Foto: </label>
+                            <input type="file" id="Foto" name="foto" class="inputveld">
+                         
+                        </div>
+
+                        <div>
+                            <label for="Beroep">Beroep: </label>
+                            <input type="text" id="Beroep" class="inputveld">
+                        </div>
+
+                        <div>Geslacht:</div>
+
+                        <div>
+                            <label for="RadiobuttonVrouw"> </label>
+                            <input type="radio" name="Sexe" id="RadiobuttonVrouw" value="v">
+                            <pre>   vrouw</pre>
+
+                            <label for="RadiobuttonMan"></label>
+                            <input type="radio" name="Sexe" id="RadiobuttonMan" value="m">
+                            <pre>   man</pre> 
+
+                            <label for="RadiobuttonX"> </label>
+                            <input type="radio" name="Sexe" id="RadiobuttonX" value="X">
+                            <pre>   x</pre>
+                        </div>
+
+                        <div>
+                            <label for="Haarkleur">Haarkleur: </label>
+                            <input type="text" id="Haarkleur" class="inputveld">
+                        </div>
+
+                        <div>
+                            <label for="Oogkleur">Oogkleur: </label>
+                            <input type="text" id="Oogkleur" class="inputveld">
+                        </div>
+
+                        <div>
+                            <label for="Grootte">Grootte: </label>
+                            <input type="text" id="Grootte" class="inputveld">
+                        </div>
+
+                        <div>
+                            <label for="Gewicht">Gewicht: </label>
+                            <input type="text" id="Gewicht" class="inputveld">
+                        </div>
+
+                        <div>
+                            <label for="Wachtwoord">Wachtwoord: </label>
+                            <input type="password" id="Wachtwoord" class="inputveld">
+                        </div>
+                        <div>
+                            <label for="Sterrenbeeld">Sterrenbeeld: </label>
+                            <input type="text" id="Sterrenbeeld" class="inputveld">
+                        </div>
                     </div>
                     <div class="button">
                         <button type="button" id="VerzendKnop" onclick="toon()">Verzenden</button>
-                        <div id="heart"></div>
+
                     </div>
                 </div>
         </main>
@@ -99,4 +129,4 @@
     <script src="inschrijven.js"></script>
 </body>
 
-</html>F
+</html>
