--- a/zoeken.html
+++ b/zoeken.html
@@ -105,6 +105,7 @@
                             <input type="text" name="ordenge" id="ordenge" />
                         </div>
                         <button type="button" id="zoek">ZOEK</button>
+                        <button type="button" id="btnBlindDate" onclick="fnBlindDate()">I FEEL LUCKY</button>
                         <ul id="lijst"></ul>
                     </form>
 
@@ -124,7 +125,7 @@
         </footer>
     </div>
 
-
+    <script src="BlindDate.js"></script>
     <script src="./zoeken.js"></script>
 </body>
 
