--- a/profiel.html
+++ b/profiel.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="wrapper">
+    <div class="profiel">
         <header>
             <h1>AT. FIRST. SIGHT.</h1>
         </header>
@@ -28,78 +28,80 @@
             </nav>
             <h2>Profiel</h2>
             <div class="content">
-                <form id="profielForm">
-                    <div class="input">
-                        <div> <label for="Nickname"> Nickname: </label>
-                            <input type="text" id="Nickname" class="inputveld" placeholder="" readonly>
-                        </div>
+                <div class="wrapper">
+                    <form id="profielForm">
+                        <div class="input">
+                            <div> <label for="Nickname"> Nickname: </label>
+                                <input type="text" id="Nickname" class="inputveld" placeholder="" readonly>
+                            </div>
 
-                        <div>
-                            <label for="Voornaam">Voornaam: </label>
-                            <input type="text" id="Voornaam" class="inputveld" placeholder=""  readonly>
-                        </div>
+                            <div>
+                                <label for="Voornaam">Voornaam: </label>
+                                <input type="text" id="Voornaam" class="inputveld" placeholder="" readonly>
+                            </div>
 
-                        <div> <label for="FamNaam">Familienaam: </label>
-                            <input type="text" id="FamNaam" class="inputveld" placeholder="" readonly>
-                        </div>
+                            <div> <label for="FamNaam">Familienaam: </label>
+                                <input type="text" id="FamNaam" class="inputveld" placeholder="" readonly>
+                            </div>
 
-                        <div>
-                            <label for="Geslacht">Geslacht: </label>
-                            <input type="text" id="Geslacht" class="inputveld" placeholder="" readonly>
-                        </div>
+                            <div>
+                                <label for="Geslacht">Geslacht: </label>
+                                <input type="text" id="Geslacht" class="inputveld" placeholder="" readonly>
+                            </div>
 
-                        <div>
-                            <label for="Geboortedatum">Geboortedatum: </label>
-                            <input type="text" id="Geboortedatum" class="inputveld" placeholder="" readonly>
-                        </div>
+                            <div>
+                                <label for="Geboortedatum">Geboortedatum: </label>
+                                <input type="text" id="Geboortedatum" class="inputveld" placeholder="" readonly>
+                            </div>
 
-                        <div>
-                            <label for="Email">E-mail: </label>
-                            <input type="email" id="Email" class="inputveld" placeholder="" >
-                        </div>
+                            <div>
+                                <label for="Email">E-mail: </label>
+                                <input type="email" id="Email" class="inputveld" placeholder="">
+                            </div>
 
-                        <div> <label for="Foto">Foto: </label>
-                            <input type="text" id="Foto" name="foto" class="inputveld" placeholder="" >
+                            <div> <label for="Foto">Foto: </label>
+                                <input type="text" id="Foto" name="foto" class="inputveld" placeholder="">
 
-                        </div>
+                            </div>
 
-                        <div>
-                            <label for="Beroep">Beroep: </label>
-                            <input type="text" id="Beroep" class="inputveld" placeholder="" >
-                        </div>
+                            <div>
+                                <label for="Beroep">Beroep: </label>
+                                <input type="text" id="Beroep" class="inputveld" placeholder="">
+                            </div>
 
-                        <div>
-                            <label for="Haarkleur">Haarkleur: </label>
-                            <input type="text" id="Haarkleur" class="inputveld" placeholder="" >
-                        </div>
+                            <div>
+                                <label for="Haarkleur">Haarkleur: </label>
+                                <input type="text" id="Haarkleur" class="inputveld" placeholder="">
+                            </div>
 
-                        <div>
-                            <label for="Oogkleur">Oogkleur: </label>
-                            <input type="text" id="Oogkleur" class="inputveld" placeholder="" >
-                        </div>
+                            <div>
+                                <label for="Oogkleur">Oogkleur: </label>
+                                <input type="text" id="Oogkleur" class="inputveld" placeholder="">
+                            </div>
 
-                        <div>
-                            <label for="Grootte">Grootte: </label>
-                            <input type="text" id="Grootte" class="inputveld" placeholder="" >
-                        </div>
+                            <div>
+                                <label for="Grootte">Grootte: </label>
+                                <input type="text" id="Grootte" class="inputveld" placeholder="">
+                            </div>
 
-                        <div>
-                            <label for="Gewicht">Gewicht: </label>
-                            <input type="text" id="Gewicht" class="inputveld" placeholder="" >
-                        </div>
+                            <div>
+                                <label for="Gewicht">Gewicht: </label>
+                                <input type="text" id="Gewicht" class="inputveld" placeholder="">
+                            </div>
 
-                        <div>
-                            <label for="Wachtwoord">Wachtwoord: </label>
-                            <input type="password" id="Wachtwoord" class="inputveld" placeholder="" >
+                            <div>
+                                <label for="Wachtwoord">Wachtwoord: </label>
+                                <input type="password" id="Wachtwoord" class="inputveld" placeholder="">
+                            </div>
+                            <div>
+                                <label for="Sterrenbeeld">Sterrenbeeld: </label>
+                                <input type="text" id="Sterrenbeeld" class="inputveld" placeholder="" readonly>
+                            </div>
+                            <div class="button">
+                                <button type="button" id="VerzendKnop">Wijzigen</button>
+                            </div>
                         </div>
-                        <div>
-                            <label for="Sterrenbeeld">Sterrenbeeld: </label>
-                            <input type="text" id="Sterrenbeeld" class="inputveld" placeholder="" readonly>
-                        </div>
-                        <div class="button">
-                            <button type="button" id="VerzendKnop">Wijzigen</button>
-                        </div>
-                    </div>
+                </div>
                 </form>
             </div>
 
