--- a/berichten.html
+++ b/berichten.html
@@ -39,6 +39,8 @@
 
                         </div>
                         <div id='containerBerichten'>
+                            <button class="berichtbutton"></button>
+                            <button class="berichttextbox"></button>
                         </div>
                     </div>
                 </div>
