--- a/zoeken.html
+++ b/zoeken.html
@@ -76,7 +76,9 @@
                         <div>
                             <label for="grootte">Grootte: </label>
                             <input type="text" name="grootte" id="grootte" />
-                            <label for="groperator">grootteOperator</label>
+                        </div>
+                        <div>
+                            <label for="groperator"> verfijn zoekterm grootte</label>
                             <select name="groperator" id="groperator">
                                 <option value="" selected>------ Kies -------</option>
                                 <option value="gt">Groter dan</option>
@@ -90,7 +92,9 @@
                         <div>
                             <label for="gewicht">Gewicht: </label>
                             <input type="text" name="gewicht" id="gewicht" />
-                            <label for="geoperator">gewichtOperator</label>
+                        </div>
+                        <div>
+                            <label for="geoperator"> verfijn zoekterm gewicht</label>
                             <select name="geoperator" id="geoperator">
                                 <option value="" selected>------ Kies -------</option>
                                 <option value="gt">Groter dan</option>
