--- a/zoeken.html
+++ b/zoeken.html
@@ -105,7 +105,7 @@
                             </select>
                         </div>
                         <div>
-                            <label for="ordenge">OrderBy </label>
+                            <label for="ordenge">Sorteer resultaten</label>
                             <input type="text" name="ordenge" id="ordenge" />
                         </div>
                         <button type="button" id="zoek">ZOEK</button>
