--- a/profiel.html
+++ b/profiel.html
@@ -21,9 +21,8 @@
                 <ul>
                     <li><a href="./zoeken.html">zoeken</a> </li>
                     <li><a href="./berichten.html">berichten</a> </li>
-                    <li><a href="./profiel.html">profiel</a> </li>
-                    <li><a href="#">reserve1</a> </li>
-                    <li><a href="#">reserve2</a> </li>
+                    <li><a href="./over_ons.html">over ons</a> </li>
+                    <li><a href="./lovecoins.html">love coins</a> </li>
                 </ul>
             </nav>
             <h2>Profiel</h2>
