validatie + inschakelen storage

--- a/profiel.html
+++ b/profiel.html
@@ -54,6 +54,11 @@
                         </div>
 
                         <div>
+                            <label for="Sterrenbeeld">Sterrenbeeld: </label>
+                            <input type="text" id="Sterrenbeeld" class="inputveld" placeholder="" readonly>
+                        </div>
+
+                        <div>
                             <label for="Email">E-mail: </label>
                             <input type="email" id="Email" class="inputveld" placeholder="" >
                         </div>
@@ -89,13 +94,15 @@
                         </div>
 
                         <div>
+                            <label for="LoveCoins">Love coins: </label>
+                            <input type="text" id="LoveCoins" class="inputveld" placeholder="" readonly>
+                        </div>
+
+                        <div>
                             <label for="Wachtwoord">Wachtwoord: </label>
                             <input type="password" id="Wachtwoord" class="inputveld" placeholder="" >
                         </div>
-                        <div>
-                            <label for="Sterrenbeeld">Sterrenbeeld: </label>
-                            <input type="text" id="Sterrenbeeld" class="inputveld" placeholder="" readonly>
-                        </div>
+
                         <div class="button">
                             <button type="button" id="VerzendKnop">Wijzigen</button>
                             <button type="button" id="Deleteknop" >Uitschrijven</button>
@@ -113,10 +120,9 @@
             <p>Copyright © 2019 VDAB.
                 Niets uit deze website mag worden verveelvoudigd en/of openbaar gemaakt door middel van druk, fotokopie,
                 microfilm of anderszins, zonder voorafgaande schriftelijke toestemming van de VDAB.</p>
-            <script src="profiel.js"></script>
+            <script type="text/javascript" src="profiel.js"></script>
         </footer>
     </div>
 
 </body>
-
 </html>
