--- a/berichten.html
+++ b/berichten.html
@@ -2,66 +2,32 @@
 <html lang="nl">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./main.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
-    <title>berichten</title>
+    <meta charset=utf-8>
+    <title>At First Sight</title>
+    <link rel="stylesheet" type="text/css" href="berichten.css" />
+    <script type="text/javascript" src="berichten.js"></script>
+
 </head>
 
 <body>
-    <div id="berichten">
+    <div class="wrapper">
+        <header>
+            <h1>Berichten</h1>
+        </header>
         <main>
+            <div id="containerGesprekspartners">
 
-            <header>
-                <h1>AT. FIRST. SIGHT.</h1>
-            </header>
+            </div>
+            <div id='containerBerichten'>
 
+            </div>
 
-            <nav class="subheader">
-                <ul>
-                    <li><a href="./profiel.html">profiel</a> </li>
-                    <li><a href="./zoeken.html">zoeken</a> </li>
-                    <li><a href="./lovecoins.html">lovecoins</a> </li>
-                    <li><a href="./over_ons.html">over ons</a> </li>
-                </ul>
-            </nav>
+        </main>
+        <footer>
 
-
-            <main>
-
-                <h2>Berichten</h2>
-
-                <div class="content">
-                    <div class="wrapper">
-                        <div id="containerGesprekspartners">
-
-                        </div>
-                        <div id='containerBerichten'>
-                            <button class="berichtbutton"></button>
-                            <button class="berichttextbox"></button>
-                        </div>
-                    </div>
-                </div>
-    </div>
-
-    </main>
-
-    <div class="man"><img src="./man-220259_640.jpg" alt="man"></div>
-    <div class="vrouw"><img src="./woman-220269_640.jpg" alt="vrouw"></div>
-
-
-    <footer>
-        <p>Copyright © 2019 VDAB.
-            Niets uit deze website mag worden verveelvoudigd en/of openbaar gemaakt door middel van druk,
-            fotokopie,
-            microfilm of anderszins, zonder voorafgaande schriftelijke toestemming van de VDAB.</p>
-    </footer>
-    </div>
-
-    <script src="berichten.js">
-    </script>
+        </footer>
+        <script src="berichten.js">
+        </script>
     </div>
 </body>
 
