--- a/berichten.html
+++ b/berichten.html
@@ -2,32 +2,64 @@
 <html lang="nl">
 
 <head>
-    <meta charset=utf-8>
-    <title>At First Sight</title>
-    <link rel="stylesheet" type="text/css" href="berichten.css" />
-    <script type="text/javascript" src="berichten.js"></script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./main.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
+    <title>berichten</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
-            <h1>Berichten</h1>
-        </header>
+    <div id="berichten">
         <main>
-            <div id="containerGesprekspartners">
 
-            </div>
-            <div id='containerBerichten'>
+            <header>
+                <h1>AT. FIRST. SIGHT.</h1>
+            </header>
 
-            </div>
 
-        </main>
-        <footer>
+            <nav class="subheader">
+                <ul>
+                    <li><a href="./profiel.html">profiel</a> </li>
+                    <li><a href="./zoeken.html">zoeken</a> </li>
+                    <li><a href="./lovecoins.html">lovecoins</a> </li>
+                    <li><a href="./over_ons.html">over ons</a> </li>
+                </ul>
+            </nav>
 
-        </footer>
-        <script src="berichten.js">
-        </script>
+
+            <main>
+
+                <h2>Berichten</h2>
+
+                <div class="content">
+                    <div class="wrapper">
+                        <div id="containerGesprekspartners">
+
+                        </div>
+                        <div id='containerBerichten'>
+                        </div>
+                    </div>
+                </div>
+    </div>
+
+    </main>
+
+    <div class="man"><img src="./man-220259_640.jpg" alt="man"></div>
+    <div class="vrouw"><img src="./woman-220269_640.jpg" alt="vrouw"></div>
+
+
+    <footer>
+        <p>Copyright © 2019 VDAB.
+            Niets uit deze website mag worden verveelvoudigd en/of openbaar gemaakt door middel van druk,
+            fotokopie,
+            microfilm of anderszins, zonder voorafgaande schriftelijke toestemming van de VDAB.</p>
+    </footer>
+    </div>
+
+    <script src="berichten2.js">
+    </script>
     </div>
 </body>
 
