nieuw bericht met onmiddelijke refresh

--- a/berichten.html
+++ b/berichten.html
@@ -58,7 +58,7 @@
     </footer>
     </div>
 
-    <script src="berichten2.js">
+    <script src="berichten.js">
     </script>
     </div>
 </body>
